# TestFrameworks

./: .gitignore  CMakeLists.txt  ReadMe.md
libs/: CMakeLists.txt
libs/uut/: CMakeLists.txt  Comparator.cpp
libs/uut/include/Comparator/: Comparator.hpp
tests/: CMakeLists.txt
tests/catch2/: CMakeLists.txt  catch2_tests.cpp
tests/gtest/: CMakeLists.txt  gtest_tests.cpp
tests/qtest/: CMakeLists.txt  qtest_tests.cpp
